styles.css
/*MOBILE SCREENS*/
body {
    font-family: Arial;
    background-color: #161d2e;
}

.hero {
    height: 100vh;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.hero::after {
    width: 100%;
    height: 100%;
    content: '';
    z-index: 10;
    position: absolute;
    top: 0;
    left: 0;
    background: rgba(0,0,0,0.4);
}

.hero video {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    z-index: 5;
    object-fit: cover;
}

.hero-image {
    display: none; /* Hide image by default */
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: #161d2e;
    z-index: 1;
}

.hero-image img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.hero .caption {
    position: relative;
    z-index: 20;
    text-align: left;
    color: white;
}

.hero-video {
    display: none; /* Hide video on mobile */
}

.hero .caption h2 {
    animation: float 3s ease-in-out infinite;
}

@keyframes float {
    0% {
        transform: translateY(0);
    }

    50% {
        transform: translateY(-20px);
    }

    100% {
        transform: translateY(0);
    }
}

.caption h2 {
    font-family: "Overpass", sans-serif;
    font-size: 1rem;
    margin-bottom: 3rem;
}

.topnav {
    overflow: hidden;
    background-color: rgba(0,0,0,0.4);
    position: relative;
    z-index: 30;
    color: white;
}

.topnav #myLinks {
    display: none;
}

.topnav a {
    color: white;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 17px;
    display: block;
    transition: 1s;
}

.topnav a:hover {
    color: lightblue;
}

topnav .icon {
    display: none;
}

.topnav a.icon {
    background: black;
    display: block;
    position: absolute;
    right: 0;
    top: 0;
}

.aboutMeSection {
    color: white;
    margin: 0px 60px;
}

.aboutMeCard h1 {
    font-family: Pangaia;
    font-size: 1.8rem;
}

.aboutMeCard {
    line-height: 1.6;
    border-radius: 10px;
}

/*Scroll Animation*/
.hidden {
    opacity: 0;
    transition: all 1s;
}

.show {
    opacity: 1;
}

.socialIcons a {
    color: white;
    font-size: 2rem;
    padding: 10px;
    text-decoration: none;
    z-index: 50;
}

.downloadBtn {
    border: 1px white solid;
    border-radius: 14px;
    background-color: transparent;
    color: white;
    padding: 0 6px;
    transition: 0.6s;
}

.downloadBtn:hover {
    background-color: white;
    color: black;

}

.socialIcons a:hover {
    color: lightblue;
}

.aboutMeContainer {
    display: flex;
    flex-direction: column;
}

.emma {
    font-style: italic;
}

a {
    color: white;
    text-decoration: none;
}

.hey {
    display: inline-block;
    position: relative;
    transition: transform 0.3s ease;
}

.hey:hover {
    transform: translate(-0%, -30%);
}

.portfolioSection {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Responsive grid */
    gap: 3rem;
    padding: 2rem;
    max-width: 1200px;
    margin-right: 30px;
}

#upArrow {
    color: white;
    font-size: 3rem;
    text-align: center;
}

.projBtnContainer {
    display: flex;
    justify-content: center;
    margin-bottom: 80px;
    margin-top: 10px;
}

.liveBtn {
    border-radius: 14px;
    cursor: pointer;
    background-color: transparent;
    border: 1px solid white;
    color: white;
}

.liveBtn:hover {
    color: black;
    background-color: white;
    transition: 0.6s;
}

.gitBtn {
    border-radius: 14px;
    cursor: pointer;
}

.gitBtn:hover {
    color: white;
    background-color: transparent;
    transition: 0.6s;
    border: 1px solid white;
}

.projectsBtn {
    font-family: "Overpass", sans-serif;
    padding: 5px 25px;
    border-radius: 14px;
    background-color: lightblue;
    font-size: 18px;
    cursor: pointer;
    margin-bottom: 40px;
    color: black;
}

.projectsBtn:hover {
    color: lightblue;
    background-color: transparent;
    border: 1px solid lightblue;
    transition: 0.6s;
}

.card {
    position: relative;
    width: 100%;
    height: 350px;
    perspective: 1000px;
}

.card-front, .card-back {
    position: absolute;
    width: 100%;
    height: 100%;
    backface-visibility: hidden;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 1rem;
    border-radius: 10px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    transition: transform 0.6s ease-in-out;
}

.card-front {
    background-color: lightblue;
    font-size: 1rem;
    text-align: center;
}

.card-back {
    background-color: #161d2e;
    color: #fff;
    transform: rotateY(180deg);
    font-size: 0.9rem;
    text-align: center;
}

.card:hover .card-front {
    transform: rotateY(180deg);
}

.card:hover .card-back {
    transform: rotateY(360deg);
}

.portfolioH1 {
    font-family: Pangaia;
    color: white;
    text-align: center;
    font-size: 1.2rem;
}

.contact {
    color: white;
    padding: 15rem 6rem;
    text-align: center;
}

.contact h1 {
    font-family: Pangaia;
    font-size: 3rem;
}

.mailto {
    font-size: 3rem;
    transition: transform 0.3s ease-in-out, color 0.3s ease-in-out;
}

.mailto:hover {
    color: lightblue;
}

.github {
    font-size: 3rem;
    transition: transform 0.3s ease-in-out, color 0.3s ease-in-out;
}

.github:hover {
    color: lightblue;
}

.linkedin {
    font-size: 3rem;
    transition: transform 0.3s ease-in-out, color 0.3s ease-in-out;
}

.linkedin:hover {
    color: lightblue;
}

.tags {
    display: flex;
    justify-content: space-between;
    align-content: space-between;
    gap: 10px;
    flex-wrap: wrap;
}

.tag {
    border: solid black 1px;
    border-radius: 14px;
    padding: 3px 10px;
    background-color: #161d2e;
    color: white;
}

.iconUp {
    color: white;
}

#jumpAboutMe {
    scroll-margin-top: 100px;
}

#jumpProjects {
    scroll-margin-top: 100px;
}

#jumpContact {
    scroll-margin-top: 100px;
}

/*blog section*/
.navBarBlog a:hover {
    color: lightblue;
}

.navBarBlog {
    text-align: right;
    font-size: 17px;
    padding: 14px 16px;
}

.blogHero {
    background-color: lightblue;
    padding: 30px;
    text-align: center;
}

.blogSection {
    color: white;
    margin: 20px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    padding: 30px;
    line-height: 1.6;
    font-size: 19px;
}

.post1  {
    text-align: left;
    border: white solid 1px;
    padding: 40px;
    margin-bottom: 30px;
}

.post2  {
    text-align: left;
    border: white solid 1px;
    padding: 40px;
}

.blog2image1, .blog2image2 {
    width: 1000px;
}

@media (max-width: 599px) {
    .hero-video {
        display: none;
    }
    .hero-image {
        display: block; /* Show image on mobile */
    }
}

/*LARGE SCREENS*/
@media only screen and (min-width: 600px) {
    .logo {
        width: 100px;
    }

    .caption h1 {
        font-size: 12rem;
        font-family: "Pangaia";
        font-weight: 100;
    }

    .caption h2 {
        font-size: 1.5rem;
    }

    .topnav {
        display: flex;
        justify-content: space-between;
        align-items: center;
    }

    .topnav #myLinks {
        display: flex;
        gap: 15px;
    }

    .topnav a.icon {
        background: black;
        display: none;
        position: absolute;
        right: 0;
        top: 0;
    }

    .aboutMeCard {
        padding: 20px;
        margin-top: 45px;
        line-height: 1.9;
        border-radius: 10px;
    }

    #jumpAboutMe {
        scroll-margin-top: 100px;
    }

    #jumpProjects {
        scroll-margin-top: 100px;
    }

    .aboutMeContainer {
        display: flex;
        flex-direction: row;
        margin-bottom: 120px;
    }

    .emmaPhoto {
        width: 400px;
    }

    .aboutMeCard h1 {
        font-size: 3rem;
    }

    .aboutMeCard p {
        font-size: 1.4rem;
    }

    .portfolioSection {
        display: grid;
        grid-template-columns: repeat(3, 1fr);
        gap: 3rem;
        padding: 2rem;
        max-width: 1200px;
        margin: 0 auto;
    }

    .card {
        position: relative;
        width: 100%;
        height: 350px;
        perspective: 1000px;
    }

    .card-front, .card-back {
        position: absolute;
        width: 100%;
        height: 100%;
        backface-visibility: hidden;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        padding: 1rem;
        border-radius: 10px;
        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
        transition: transform 0.6s ease-in-out;
    }

    .card-front {
        background-color: lightblue;
        font-size: 1rem;
        text-align: center;
    }

    .card-back {
        background-color: #161d2e;
        color: #fff;
        transform: rotateY(180deg);
        font-size: 0.9rem;
        text-align: center;
    }

    .card:hover .card-front {
        transform: rotateY(180deg);
    }

    .card:hover .card-back {
        transform: rotateY(360deg);
    }

    .portfolioH1 {
        font-family: Pangaia;
        color: white;
        text-align: center;
        font-size: 1.7rem;
    }

    .tags {
        display: flex;
        justify-content: space-between;
        align-content: space-between;
        gap: 10px;
    }

    .tag {
        border: solid black 1px;
        border-radius: 14px;
        padding: 3px 10px;
        background-color: #161d2e;
        color: white;
    }

    .contact {
        color: white;
        padding: 20rem;
        text-align: center;
    }

    .projBtnContainer {
        display: flex;
        justify-content: center;
        margin-bottom: 30px;
    }

    .projectsBtn {
        font-family: "Overpass", sans-serif;
        padding: 10px 30px;
        border-radius: 14px;
        background-color: lightblue;
        font-size: 18px;
        cursor: pointer;
    }

}

